Removendo linhas desnecessarias

--- a/calcula_consumo.html
+++ b/calcula_consumo.html
@@ -1,9 +1,8 @@
-<meta charset="UTF-8">
+﻿<meta charset="UTF-8">
 
 <h3>Álcool ou Gasolina?</h3>
 
 <script type="text/javascript">
-
 	var tanque = 40;
 	var km = 480;
 	var consumoDeGasolina = km/tanque
@@ -11,6 +10,5 @@
 
 	var km = 300;
 	var consumoDeÁlcool = km/tanque
-	document.write("Um carro com " + tanque + " litros de álcool, percorreu " + km + " km. O consumo de álcool foi de " + consumoDeÁlcool + " Km/L<br>");
-	
+	document.write("Um carro com " + tanque + " litros de álcool, percorreu " + km + " km. O consumo de álcool foi de " + consumoDeÁlcool + " Km/L<br>");	
 </script>
