--- a/A_idade_do_meu_irmão.html
+++ b/A_idade_do_meu_irmão.html
@@ -1,21 +1,21 @@
-<meta charset="UTF-8">
+﻿<meta charset="UTF-8">
 
 <script type="text/javascript">
 
 	//functions
-		function string(text)
+	function string(text)
 	{
-			document.write(text);
-			document.write("<br>")
+		document.write(text);
+		document.write("<br>")
 	}
 	// var
-		var anoAtual = 2020;
-		var nascimentoCarol = 2005;
-		var nascimentoFernando = 2014;
-		var idadeCarol = (anoAtual - nascimentoCarol);
-		var idadeFernando = (anoAtual - nascimentoFernando);
+	var anoAtual = 2020;
+	var nascimentoCarol = 2005;
+	var nascimentoFernando = 2014;
+	var idadeCarol = (anoAtual - nascimentoCarol);
+	var idadeFernando = (anoAtual - nascimentoFernando);
 
 	//string
-		string("Eu tenho 15 anos e meu irmão, Fernando, 6. Nossa diferença de idade é " + (idadeCarol - idadeFernando) + ".");
+	string("Eu tenho " + idadeCarol + " anos e meu irmão, Fernando, " + idadeFernando + " . Nossa diferença de idade é " + (idadeCarol - idadeFernando) + ".");
 
 </script>
