--- a/calcula_consumo.html
+++ b/calcula_consumo.html
@@ -3,6 +3,8 @@
 <h3>Álcool ou Gasolina?</h3>
 
 <script type="text/javascript">
+	//functions 
+
 	var tanque = 40;
 	var km = 480;
 	var consumoDeGasolina = km/tanque
