Continuação dos deveres do curso Alura.

--- a/media_idades_familiares.html
+++ b/media_idades_familiares.html
@@ -13,8 +13,8 @@
 	}
 
 	//var
-	var totalFamiliares = parseInt(prompt("Quantas pessoas tem em sua família?");
-	var numero = 0;
+	var totalFamiliares = parseInt(prompt("Quantas pessoas tem em sua família?"));
+	var numero = 1;
 	var totalIdades = 0;
 	
 	//string
@@ -27,7 +27,6 @@
 
 	var mediaIdades = totalIdades / totalFamiliares;
 	string("A média das idades de seus familaires é " + mediaIdades)
-
 	string("FIM");
 
 </script>
