Deveres Alura, acrescentando while a "jogo_adivinha".

--- a/barrados_no_baile.html
+++ b/barrados_no_baile.html
@@ -13,8 +13,15 @@
 	}
 
 	//var
+	contador = 1;
 
 	//string
-	
+	while (contador <= 3)
+	{
+		alert("Deixe-me entrar!");
+		contador++
+
+
+    }	
 
 </script>
