--- a/jogo_adivinha.html
+++ b/jogo_adivinha.html
@@ -1,4 +1,4 @@
-<meta charset="UTF-8">
+﻿<meta charset="UTF-8">
 <script type="text/javascript">
 	
 	//functions
@@ -16,16 +16,15 @@
 
 	function sorteia(n)
 	{
-		return Math.floor(Math.random() * (n - 0)) + 0;
+		return Math.round(Math.random() * (n - 0)) + 0;
 	}
 
 	//var
 	var numeroPensado = sorteia(10);
 	var chute = parseInt(prompt("Já pensei em um número de 1 a 10. Qual seu chute?"));
 
-	alert(numeroPensado);
 
-	do
+    while (chute != numeroPensado)
 	{
 		if (chute > numeroPensado)
 		{
@@ -37,13 +36,11 @@
 			alert("Você errou!");
 			chute = parseInt(prompt("Chute novamente. Uma dica: o número que você chutou é menor que o número pensado"));
 		}			
-	} while(chute != numeroPensado)
+	} 
 
 	if (chute == numeroPensado)
 	{
 		alert("Você acertou. Parabéns!");
 	}
-
-
 
 </script>
